--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -98,7 +98,10 @@
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <div class="button-row pl-8">
+            <div class="button-row" style="margin-left: -10px">
+              <button mat-icon-button color="" matTooltip="Lihat" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">
+                <mat-icon class="secondary-text">assignment</mat-icon>
+              </button>
               <button mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish'" matTooltip="Hapus"
                 (click)="deleteStp(row.id)">
                 <mat-icon>delete</mat-icon>
