--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -5,11 +5,11 @@
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column" fusePerfectScrollbar>
-      <form autocomplete="off" [formGroup]="formAudience">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <h2 class="">Buat Audience</h2>
-        </div>
-        <div class="ayo-middle py-24" fxLayout="column">
+      <div fxLayout="row" fxLayoutAlign="space-between center">
+        <h2 class="">Buat Audience</h2>
+      </div>
+      <div class="ayo-middle py-24" fxLayout="column">
+        <form autocomplete="off" [formGroup]="formAudience">
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <input matInput type="text" formControlName="name" placeholder="Nama Grup">
@@ -42,8 +42,11 @@
             fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="45%" class="is-light form-primary">
               <input matInput type="number" min="0" placeholder="Audience Minimal" formControlName="min" numericOnly>
-              <mat-error *ngIf="formAudience.controls['min'].hasError('required') && formAudience.controls['max'].touched">
+              <mat-error *ngIf="formAudience.controls['min'].hasError('required') && formAudience.controls['min'].touched">
                 Audience Minimal harus diisi
+              </mat-error>
+              <mat-error *ngIf="formAudience.controls['min'].hasError('min') && formAudience.controls['min'].touched">
+                Audience Minimal tidak boleh kurang dari 0
               </mat-error>
             </mat-form-field>
 
@@ -52,9 +55,14 @@
               <mat-error *ngIf="formAudience.controls['max'].hasError('required') && formAudience.controls['max'].touched">
                 Audience Maksimal harus diisi
               </mat-error>
+              <mat-error *ngIf="formAudience.controls['max'].hasError('min') && formAudience.controls['max'].touched">
+                Audience maksimal tidak boleh kurang dari jumlah minimal audience
+              </mat-error>
             </mat-form-field>
           </div>
-          <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="21px" fxLayoutGap.lt-md="0px">
+        </form>
+      </div>
+      <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="21px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="15%" class="is-light form-primary">
               <input matInput type="text" (keyup)="searchRetailer.next($event.target.value)" placeholder="Kode Nasional"
                 formControlName="national">
@@ -84,50 +92,106 @@
               <input matInput type="text" (keyup)="searchRetailer.next($event.target.value)" placeholder="Kode Teritori"
                 formControlName="teritory">
             </mat-form-field>
-          </div>
+          </div> -->
 
-          <div class="p-0">
-            <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
-              [rowHeight]="'auto'" [limit]="10" [selected]="selected" [selectionType]="'checkbox'"
-              [selectAllRowsOnPage]="false" (select)='onSelect($event)' [sorts]="[{prop: 'name', dir: 'asc'}]">
-              <!-- <ngx-datatable-column [width]="30" [sortable]="false" [canAutoResize]="false" [draggable]="false"
-                [resizeable]="false" [headerCheckboxable]="true" [checkboxable]="true"> -->
-              <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true" [draggable]="false"
-                [resizeable]="false" [headerCheckboxable]="true">
-                <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
-                  let-selectFn="selectFn">
-                  <mat-checkbox [checked]="allRowsSelected" [disabled]="formAudience.get('type').value === 'pick-all'"
-                    (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-                </ng-template>
+      <form [formGroup]="formFilter" autoComplete="off">
+        <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
-                <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
-                  let-onCheckboxChangeFn="onCheckboxChangeFn">
-                  <mat-checkbox [checked]="isSelected" [disabled]="formAudience.get('type').value === 'pick-all'"
-                    (change)="onCheckboxChangeFn($event)"></mat-checkbox>
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
-              <ngx-datatable-column name="Kode" prop="refferal_code"></ngx-datatable-column>
-              <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
-              <ngx-datatable-column name="Daftar Ayo" prop="status">
-                <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                  <span *ngIf="row.status === 'active' || row.status === 'inactive'">Yes</span>
-                  <span *ngIf="row.status === 'not-registered'">No</span>
-                </ng-template>
-              </ngx-datatable-column>
-              <ngx-datatable-column name="Kode Divisi" prop="sales_point"></ngx-datatable-column>
-              <ngx-datatable-column name="Wilayah" prop="region"></ngx-datatable-column>
-              <ngx-datatable-column name="Area" prop="area"></ngx-datatable-column>
-            </ngx-datatable>
-          </div>
-        </div>
-
-        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
-          <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
-            SIMPAN
-          </button>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="National" formControlName="national">
+              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formFilter.get('zone').value)">
+              <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                Zona' :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formFilter.get('region').value)">
+              <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                Regional'
+                :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formFilter.get('area').value)">
+              <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                Area'
+                :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formFilter.get('salespoint').value)">
+              <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name === 'all' ?
+                'Semua
+                Salespoint'
+                :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formFilter.get('district').value)">
+              <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                District'
+                :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-select placeholder="Territory" formControlName="territory">
+              <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name === 'all' ? 'Semua
+                Territori'
+                :
+                item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </form>
+    </div>
+
+    <div class="p-0">
+      <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
+      <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
+        [rowHeight]="'auto'" [limit]="10" [selected]="selected" [selectionType]="'checkbox'" [selectAllRowsOnPage]="false"
+        (select)='onSelect($event)' [sorts]="[{prop: 'name', dir: 'asc'}]">
+        <!-- <ngx-datatable-column [width]="30" [sortable]="false" [canAutoResize]="false" [draggable]="false"
+                [resizeable]="false" [headerCheckboxable]="true" [checkboxable]="true"> -->
+        <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true" [draggable]="false" [resizeable]="false"
+          [headerCheckboxable]="true">
+          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+            let-selectFn="selectFn">
+            <mat-checkbox [checked]="allRowsSelected" [disabled]="formAudience.get('type').value === 'pick-all'"
+              (change)="selectFn(!allRowsSelected)"></mat-checkbox>
+          </ng-template>
+
+          <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn">
+            <mat-checkbox [checked]="isSelected" [disabled]="formAudience.get('type').value === 'pick-all'" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
+        <ngx-datatable-column name="Kode" prop="refferal_code"></ngx-datatable-column>
+        <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
+        <ngx-datatable-column name="Daftar Ayo" prop="status">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span *ngIf="row.status === 'active' || row.status === 'inactive'">Yes</span>
+            <span *ngIf="row.status === 'not-registered'">No</span>
+          </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column name="Kode Divisi" prop="division_code"></ngx-datatable-column>
+        <ngx-datatable-column name="Wilayah" prop="region_code"></ngx-datatable-column>
+        <ngx-datatable-column name="Area" prop="area_code"></ngx-datatable-column>
+      </ngx-datatable>
+    </div>
+
+    <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+      <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
+        SIMPAN
+      </button>
     </div>
   </div>
 </div>
