--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -8,7 +8,7 @@
     <!-- <button style="min-width: 170px;" mat-raised-button type="button" class="is-danger">HAPUS</button> -->
   </page-content-header>
   <!-- / HEADER -->
-  <div class="content p-24" *ngIf="!onLoad">
+  <div class="content p-24" *ngIf="!onLoad" fusePerfectScrollbar>
     <div class="table-wrapper">
       <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
@@ -30,9 +30,8 @@
       </div>
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
-        [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]"
-        (select)="onSelect($event)">
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+        (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)">
 
         <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
             <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected" let-selectFn="selectFn">
@@ -55,7 +54,7 @@
 
         <ngx-datatable-column name="Nama Produk" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" [routerLink]="['/product', 'edit', row.id]">{{row.name}}</span>
+            <span class="row-name" [routerLink]="['/sku-management', 'product', 'edit', row.id]">{{row.name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
@@ -74,7 +73,7 @@
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button color="" matTooltip="Ubah" [routerLink]="['/product', 'edit', row.id]">
+              <button mat-icon-button color="" matTooltip="Ubah Produk" [routerLink]="['/sku-management', 'product', 'edit', row.id]">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button mat-icon-button color="primary" matTooltip="Hapus Produk" (click)="deleteProduct(row.id)">
