--- a/src/global.scss
+++ b/src/global.scss
@@ -935,3 +935,11 @@ a {
   color: white !important;
   padding: 6px !important;
 }
+
+
+a[href="https://froala.com/wysiwyg-editor"],
+a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
+  display: none !important;
+  position: absolute;
+  top: -99999999px;
+}
