--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -196,7 +196,7 @@
           <form [formGroup]="verticalStepperStep4">
 
             <ng-template matStepLabel>Tipe Toko</ng-template>
-            <div fxFlex="1 0 auto" fxLayout="column">
+            <!-- <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
                 <mat-select placeholder="Tipe Retailer" formControlName="type">
                   <mat-option *ngFor="let item of listType" [value]="item.value">{{item.name}}</mat-option>
@@ -205,7 +205,7 @@
                   Tipe Retailer harus diisi
                 </mat-error>
               </mat-form-field>
-            </div>
+            </div> -->
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
