--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -45,18 +45,18 @@
           </mat-form-field>
 
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px">
-            <small>Nomor Ponsel</small>
+            <!-- <small>Nomor Ponsel</small> -->
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-              <mat-form-field fxFlex="7" fxFlex.xs="30" class="form-primary">
+              <!-- <mat-form-field fxFlex="7" fxFlex.xs="30" class="form-primary">
                 <input matInput value="+62" readonly>
-              </mat-form-field>
-              <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
-                <input matInput formControlName="phone" type="tel" min="0">
+              </mat-form-field> -->
+              <mat-form-field fxFlex.xs="70" class="form-primary">
+                <input matInput placeholder="Nomor Ponsel" formControlName="phone" type="text" min="0">
               </mat-form-field>
             </div>
-            <mat-error *ngIf="formRetailer.controls['phone'].hasError('required') && formRetailer.controls['phone'].touched ">
+            <!-- <mat-error *ngIf="formRetailer.controls['phone'].hasError('required') && formRetailer.controls['phone'].touched ">
               Nomor ponsel harus diisi.
-            </mat-error>
+            </mat-error> -->
           </div>
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
@@ -140,14 +140,14 @@
           </mat-form-field>
 
 
-          <mat-form-field fxFlex="100" class="is-light">
+          <!-- <mat-form-field fxFlex="100" class="is-light">
             <mat-select placeholder="Tipe Retailer" formControlName="type">
               <mat-option *ngFor="let item of listType" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
             <mat-error *ngIf="formRetailer.controls['type'].hasError('required') && formRetailer.controls['type'].touched ">
               Tipe Retailer harus diisi
             </mat-error>
-          </mat-form-field>
+          </mat-form-field> -->
 
 
           <mat-form-field fxFlex="100" class="is-light">
