--- a/src/app/pages/dte/schedule-program/dialog/list-audience-dialog.component.html
+++ b/src/app/pages/dte/schedule-program/dialog/list-audience-dialog.component.html
@@ -23,7 +23,7 @@
       [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
       [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
       <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
-      <ngx-datatable-column name="Kode" prop="refferal_code"></ngx-datatable-column>
+      <ngx-datatable-column name="Kode" prop="code"></ngx-datatable-column>
       <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
       <ngx-datatable-column name="Daftar Ayo" prop="status">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
