--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -51,7 +51,7 @@
                 <input matInput value="+62" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="95" fxFlex.xs="70" class="form-primary">
-                <input matInput formControlName="phone" type="tel" min="0">
+                <input matInput formControlName="phone" type="tel">
               </mat-form-field>
             </div>
             <mat-error *ngIf="formWs.controls['phone'].hasError('required') && formWs.controls['phone'].touched ">
