--- a/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
+++ b/src/app/pages/dte/schedule-program/create/schedule-program-create.component.html
@@ -125,7 +125,7 @@
               <div class="pb-16">
                 <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
                   <h3 class="">
-                    <strong>Pengingat Tugas</strong>
+                    <strong>Pengulangan Tugas</strong>
                   </h3>
                 </div>
                 <mat-radio-group formControlName="repeated">
