--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -118,12 +118,12 @@
               <div class="border-bottom pb-24" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
                 <ng-container *ngIf="item.get('typeSelection').value['value'] == 'text'">
                   <mat-form-field fxFlex="60" class="question is-light">
-                    <input matInput value="Tesk jawaban singkat" disabled>
+                    <input matInput value="Teks jawaban singkat" disabled>
                   </mat-form-field>
                 </ng-container>
                 <ng-container *ngIf="item.get('typeSelection').value['value'] == 'textarea'">
                   <mat-form-field fxFlex="80" class="question is-light">
-                    <input matInput value="Tesk jawaban panjang" disabled>
+                    <input matInput value="Teks jawaban panjang" disabled>
                   </mat-form-field>
                 </ng-container>
                 <ng-container *ngIf="item.get('typeSelection').value['value'] == 'image'">
