--- a/src/app/pages/sku-management/coin/index/coin-index.component.html
+++ b/src/app/pages/sku-management/coin/index/coin-index.component.html
@@ -87,9 +87,9 @@
             <ngx-datatable-column name="Nama" prop="name"></ngx-datatable-column>
             <ngx-datatable-column name="Kode Agen" prop="code"></ngx-datatable-column>
             <ngx-datatable-column name="Nomor Ponsel" prop="phone"></ngx-datatable-column>
-            <ngx-datatable-column name="Terakhir Masuk" prop="visits">
+            <ngx-datatable-column name="Terakhir Masuk" prop="terakhir_masuk">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                {{row.visits?.updated_at | date:'dd/MM/yyyy'}}
+                {{row.terakhir_masuk?.date | date:'dd/MM/yyyy'}}
               </ng-template>
             </ngx-datatable-column>
 
