--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -8,7 +8,7 @@
     <!-- <button style="min-width: 170px;" mat-raised-button type="button" class="is-danger">HAPUS</button> -->
   </page-content-header>
   <!-- / HEADER -->
-  <div class="content p-24" *ngIf="!onLoad" fusePerfectScrollbar>
+  <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
         class="p-16 export">
