--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -208,7 +208,7 @@
           </div>
         </div>
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
-          <button mat-raised-button type="button" (click)="submit('draf')" fxFlex="20">
+          <button mat-raised-button type="button" (click)="submit('draft')" fxFlex="20">
             SIMPAN SEBAGAI DRAF
           </button>
           <button mat-raised-button type="button" class="confirmation-button" (click)="submit('publish')" fxFlex="20">
